--- a/abcd.html
+++ b/abcd.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *{
+            background-color: aqua;        
+        }
+    </style>
 </head>
 <body>
+    <h1>so we are adding somthing to understand the git branch concept</h1>
     <p>hello how are you</p>
 </body>
 </html>
