to merge by terminal

--- a/abcd.html
+++ b/abcd.html
@@ -13,5 +13,6 @@
 <body>
     <h1>so we are adding somthing to understand the git branch concept</h1>
     <p>hello how are you</p>
+    <p>hello this is the additional line for to test on the terminal </p>
 </body>
 </html>
